// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hypothetical: anchored cells > a fully-loaded conditional: motion goal, direct object, aspect, tense and a modal 1`] = `
{
  "de": "wenn das Tier würde gerade zur Antarktis gehen müssen, der Engel würde im Begriff das Wasser sein zu trinken.",
  "en": "if the animal had to be going to Antarctica, the angel would be about to drink the water.",
  "es": "si el animal debiera estar yendo a la Antártida, el ángel está a punto de beber el agua.",
  "fr": "si l'animal devait être en train d'aller à l'Antarctique, l'ange est sur le point de boire l'eau.",
  "it": "se l'animale dovesse stare andando all'Antartide, l'angelo sta per bere l'acqua.",
  "ja": "もし動物が南極大陸へ行ったら、天使は水を飲むところです。",
  "pt": "se o animal devesse estar indo à Antártida, o anjo está prestes a beber a água.",
}
`;

exports[`hypothetical: anchored cells > prospective present main, with a future progressive MUST-governed if clause 1`] = `
{
  "de": "wenn der Kater würde gerade essen müssen, der Hund würde im Begriff sein zu laufen.",
  "en": "if the cat had to be eating, the dog would be about to run.",
  "es": "si el gato debiera estar comiendo, el perro está a punto de correr.",
  "fr": "si le chat devait être en train de manger, le chien est sur le point de courir.",
  "it": "se il gatto dovesse stare mangiando, il cane sta per correre.",
  "ja": "もし猫が食べたら、犬は走るところです。",
  "pt": "se o gato devesse estar comendo, o cão está prestes a correr.",
}
`;

exports[`main: future · neutral > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estará comiendo, el perro correría.",
    "fr": "si le chat sera en train de manger, le chien courrait.",
    "it": "se il gatto starà mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estará comendo, o cão correria.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estará a punto de comer, el perro correría.",
    "fr": "si le chat sera sur le point de manger, le chien courrait.",
    "it": "se il gatto starà per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estará prestes a comer, o cão correria.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato habrá comido, el perro correría.",
    "fr": "si le chat aura mangé, le chien courrait.",
    "it": "se il gatto avrà mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato terá comido, o cão correria.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estaba comiendo, el perro correría.",
    "fr": "si le chat était en train de manger, le chien courrait.",
    "it": "se il gatto stava mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estava comendo, o cão correria.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estaba a punto de comer, el perro correría.",
    "fr": "si le chat était sur le point de manger, le chien courrait.",
    "it": "se il gatto stava per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estava prestes a comer, o cão correria.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato había comido, el perro correría.",
    "fr": "si le chat avait mangé, le chien courrait.",
    "it": "se il gatto aveva mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato tinha comido, o cão correria.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato está comiendo, el perro correría.",
    "fr": "si le chat est en train de manger, le chien courrait.",
    "it": "se il gatto sta mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato está comendo, o cão correria.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato está a punto de comer, el perro correría.",
    "fr": "si le chat est sur le point de manger, le chien courrait.",
    "it": "se il gatto sta per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato está prestes a comer, o cão correria.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato ha comido, el perro correría.",
    "fr": "si le chat a mangé, le chien courrait.",
    "it": "se il gatto ha mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato comeu, o cão correria.",
  },
}
`;

exports[`main: future · progressive > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estará corriendo.",
    "fr": "si le chat mangeait, le chien sera en train de courir.",
    "it": "se il gatto mangiasse, il cane starà correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato comesse, o cão estará correndo.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estará comiendo, el perro estará corriendo.",
    "fr": "si le chat sera en train de manger, le chien sera en train de courir.",
    "it": "se il gatto starà mangiando, il cane starà correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estará comendo, o cão estará correndo.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estará a punto de comer, el perro estará corriendo.",
    "fr": "si le chat sera sur le point de manger, le chien sera en train de courir.",
    "it": "se il gatto starà per mangiare, il cane starà correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estará prestes a comer, o cão estará correndo.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato habrá comido, el perro estará corriendo.",
    "fr": "si le chat aura mangé, le chien sera en train de courir.",
    "it": "se il gatto avrà mangiato, il cane starà correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato terá comido, o cão estará correndo.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estará corriendo.",
    "fr": "si le chat mangeait, le chien sera en train de courir.",
    "it": "se il gatto mangiasse, il cane starà correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato comesse, o cão estará correndo.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estaba comiendo, el perro estará corriendo.",
    "fr": "si le chat était en train de manger, le chien sera en train de courir.",
    "it": "se il gatto stava mangiando, il cane starà correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estava comendo, o cão estará correndo.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estaba a punto de comer, el perro estará corriendo.",
    "fr": "si le chat était sur le point de manger, le chien sera en train de courir.",
    "it": "se il gatto stava per mangiare, il cane starà correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estava prestes a comer, o cão estará correndo.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato había comido, el perro estará corriendo.",
    "fr": "si le chat avait mangé, le chien sera en train de courir.",
    "it": "se il gatto aveva mangiato, il cane starà correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato tinha comido, o cão estará correndo.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estará corriendo.",
    "fr": "si le chat mangeait, le chien sera en train de courir.",
    "it": "se il gatto mangiasse, il cane starà correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato comesse, o cão estará correndo.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato está comiendo, el perro estará corriendo.",
    "fr": "si le chat est en train de manger, le chien sera en train de courir.",
    "it": "se il gatto sta mangiando, il cane starà correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato está comendo, o cão estará correndo.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato está a punto de comer, el perro estará corriendo.",
    "fr": "si le chat est sur le point de manger, le chien sera en train de courir.",
    "it": "se il gatto sta per mangiare, il cane starà correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato está prestes a comer, o cão estará correndo.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato ha comido, el perro estará corriendo.",
    "fr": "si le chat a mangé, le chien sera en train de courir.",
    "it": "se il gatto ha mangiato, il cane starà correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato comeu, o cão estará correndo.",
  },
}
`;

exports[`main: future · prospective > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estará a punto de correr.",
    "fr": "si le chat mangeait, le chien sera sur le point de courir.",
    "it": "se il gatto mangiasse, il cane starà per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato comesse, o cão estará prestes a correr.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estará comiendo, el perro estará a punto de correr.",
    "fr": "si le chat sera en train de manger, le chien sera sur le point de courir.",
    "it": "se il gatto starà mangiando, il cane starà per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estará comendo, o cão estará prestes a correr.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estará a punto de comer, el perro estará a punto de correr.",
    "fr": "si le chat sera sur le point de manger, le chien sera sur le point de courir.",
    "it": "se il gatto starà per mangiare, il cane starà per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estará prestes a comer, o cão estará prestes a correr.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato habrá comido, el perro estará a punto de correr.",
    "fr": "si le chat aura mangé, le chien sera sur le point de courir.",
    "it": "se il gatto avrà mangiato, il cane starà per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato terá comido, o cão estará prestes a correr.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estará a punto de correr.",
    "fr": "si le chat mangeait, le chien sera sur le point de courir.",
    "it": "se il gatto mangiasse, il cane starà per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato comesse, o cão estará prestes a correr.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estaba comiendo, el perro estará a punto de correr.",
    "fr": "si le chat était en train de manger, le chien sera sur le point de courir.",
    "it": "se il gatto stava mangiando, il cane starà per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estava comendo, o cão estará prestes a correr.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estaba a punto de comer, el perro estará a punto de correr.",
    "fr": "si le chat était sur le point de manger, le chien sera sur le point de courir.",
    "it": "se il gatto stava per mangiare, il cane starà per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estava prestes a comer, o cão estará prestes a correr.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato había comido, el perro estará a punto de correr.",
    "fr": "si le chat avait mangé, le chien sera sur le point de courir.",
    "it": "se il gatto aveva mangiato, il cane starà per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato tinha comido, o cão estará prestes a correr.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estará a punto de correr.",
    "fr": "si le chat mangeait, le chien sera sur le point de courir.",
    "it": "se il gatto mangiasse, il cane starà per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato comesse, o cão estará prestes a correr.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato está comiendo, el perro estará a punto de correr.",
    "fr": "si le chat est en train de manger, le chien sera sur le point de courir.",
    "it": "se il gatto sta mangiando, il cane starà per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato está comendo, o cão estará prestes a correr.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato está a punto de comer, el perro estará a punto de correr.",
    "fr": "si le chat est sur le point de manger, le chien sera sur le point de courir.",
    "it": "se il gatto sta per mangiare, il cane starà per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato está prestes a comer, o cão estará prestes a correr.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato ha comido, el perro estará a punto de correr.",
    "fr": "si le chat a mangé, le chien sera sur le point de courir.",
    "it": "se il gatto ha mangiato, il cane starà per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato comeu, o cão estará prestes a correr.",
  },
}
`;

exports[`main: future · resultative > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro habrá corrido.",
    "fr": "si le chat mangeait, le chien aura couru.",
    "it": "se il gatto mangiasse, il cane avrà corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato comesse, o cão terá corrido.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estará comiendo, el perro habrá corrido.",
    "fr": "si le chat sera en train de manger, le chien aura couru.",
    "it": "se il gatto starà mangiando, il cane avrà corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estará comendo, o cão terá corrido.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estará a punto de comer, el perro habrá corrido.",
    "fr": "si le chat sera sur le point de manger, le chien aura couru.",
    "it": "se il gatto starà per mangiare, il cane avrà corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estará prestes a comer, o cão terá corrido.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato habrá comido, el perro habrá corrido.",
    "fr": "si le chat aura mangé, le chien aura couru.",
    "it": "se il gatto avrà mangiato, il cane avrà corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato terá comido, o cão terá corrido.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro habrá corrido.",
    "fr": "si le chat mangeait, le chien aura couru.",
    "it": "se il gatto mangiasse, il cane avrà corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato comesse, o cão terá corrido.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estaba comiendo, el perro habrá corrido.",
    "fr": "si le chat était en train de manger, le chien aura couru.",
    "it": "se il gatto stava mangiando, il cane avrà corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estava comendo, o cão terá corrido.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estaba a punto de comer, el perro habrá corrido.",
    "fr": "si le chat était sur le point de manger, le chien aura couru.",
    "it": "se il gatto stava per mangiare, il cane avrà corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estava prestes a comer, o cão terá corrido.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato había comido, el perro habrá corrido.",
    "fr": "si le chat avait mangé, le chien aura couru.",
    "it": "se il gatto aveva mangiato, il cane avrà corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato tinha comido, o cão terá corrido.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro habrá corrido.",
    "fr": "si le chat mangeait, le chien aura couru.",
    "it": "se il gatto mangiasse, il cane avrà corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato comesse, o cão terá corrido.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato está comiendo, el perro habrá corrido.",
    "fr": "si le chat est en train de manger, le chien aura couru.",
    "it": "se il gatto sta mangiando, il cane avrà corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato está comendo, o cão terá corrido.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato está a punto de comer, el perro habrá corrido.",
    "fr": "si le chat est sur le point de manger, le chien aura couru.",
    "it": "se il gatto sta per mangiare, il cane avrà corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato está prestes a comer, o cão terá corrido.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato ha comido, el perro habrá corrido.",
    "fr": "si le chat a mangé, le chien aura couru.",
    "it": "se il gatto ha mangiato, il cane avrà corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato comeu, o cão terá corrido.",
  },
}
`;

exports[`main: past · neutral > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estará comiendo, el perro correría.",
    "fr": "si le chat sera en train de manger, le chien courrait.",
    "it": "se il gatto starà mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato estará comendo, o cão correria.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estará a punto de comer, el perro correría.",
    "fr": "si le chat sera sur le point de manger, le chien courrait.",
    "it": "se il gatto starà per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato estará prestes a comer, o cão correria.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato habrá comido, el perro correría.",
    "fr": "si le chat aura mangé, le chien courrait.",
    "it": "se il gatto avrà mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato terá comido, o cão correria.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estaba comiendo, el perro correría.",
    "fr": "si le chat était en train de manger, le chien courrait.",
    "it": "se il gatto stava mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato estava comendo, o cão correria.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estaba a punto de comer, el perro correría.",
    "fr": "si le chat était sur le point de manger, le chien courrait.",
    "it": "se il gatto stava per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato estava prestes a comer, o cão correria.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato había comido, el perro correría.",
    "fr": "si le chat avait mangé, le chien courrait.",
    "it": "se il gatto aveva mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato tinha comido, o cão correria.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato está comiendo, el perro correría.",
    "fr": "si le chat est en train de manger, le chien courrait.",
    "it": "se il gatto sta mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato está comendo, o cão correria.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato está a punto de comer, el perro correría.",
    "fr": "si le chat est sur le point de manger, le chien courrait.",
    "it": "se il gatto sta per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato está prestes a comer, o cão correria.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato ha comido, el perro correría.",
    "fr": "si le chat a mangé, le chien courrait.",
    "it": "se il gatto ha mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走りました。",
    "pt": "se o gato comeu, o cão correria.",
  },
}
`;

exports[`main: past · progressive > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estaba corriendo.",
    "fr": "si le chat mangeait, le chien était en train de courir.",
    "it": "se il gatto mangiasse, il cane stava correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato comesse, o cão estava correndo.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estará comiendo, el perro estaba corriendo.",
    "fr": "si le chat sera en train de manger, le chien était en train de courir.",
    "it": "se il gatto starà mangiando, il cane stava correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato estará comendo, o cão estava correndo.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estará a punto de comer, el perro estaba corriendo.",
    "fr": "si le chat sera sur le point de manger, le chien était en train de courir.",
    "it": "se il gatto starà per mangiare, il cane stava correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato estará prestes a comer, o cão estava correndo.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato habrá comido, el perro estaba corriendo.",
    "fr": "si le chat aura mangé, le chien était en train de courir.",
    "it": "se il gatto avrà mangiato, il cane stava correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato terá comido, o cão estava correndo.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estaba corriendo.",
    "fr": "si le chat mangeait, le chien était en train de courir.",
    "it": "se il gatto mangiasse, il cane stava correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato comesse, o cão estava correndo.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estaba comiendo, el perro estaba corriendo.",
    "fr": "si le chat était en train de manger, le chien était en train de courir.",
    "it": "se il gatto stava mangiando, il cane stava correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato estava comendo, o cão estava correndo.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estaba a punto de comer, el perro estaba corriendo.",
    "fr": "si le chat était sur le point de manger, le chien était en train de courir.",
    "it": "se il gatto stava per mangiare, il cane stava correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato estava prestes a comer, o cão estava correndo.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato había comido, el perro estaba corriendo.",
    "fr": "si le chat avait mangé, le chien était en train de courir.",
    "it": "se il gatto aveva mangiato, il cane stava correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato tinha comido, o cão estava correndo.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro estaba corriendo.",
    "fr": "si le chat mangeait, le chien était en train de courir.",
    "it": "se il gatto mangiasse, il cane stava correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato comesse, o cão estava correndo.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato está comiendo, el perro estaba corriendo.",
    "fr": "si le chat est en train de manger, le chien était en train de courir.",
    "it": "se il gatto sta mangiando, il cane stava correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato está comendo, o cão estava correndo.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato está a punto de comer, el perro estaba corriendo.",
    "fr": "si le chat est sur le point de manger, le chien était en train de courir.",
    "it": "se il gatto sta per mangiare, il cane stava correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato está prestes a comer, o cão estava correndo.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato ha comido, el perro estaba corriendo.",
    "fr": "si le chat a mangé, le chien était en train de courir.",
    "it": "se il gatto ha mangiato, il cane stava correndo.",
    "ja": "もし猫が食べたら、犬は走っていました。",
    "pt": "se o gato comeu, o cão estava correndo.",
  },
}
`;

exports[`main: past · prospective > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estaba a punto de correr.",
    "fr": "si le chat mangeait, le chien était sur le point de courir.",
    "it": "se il gatto mangiasse, il cane stava per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato comesse, o cão estava prestes a correr.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estará comiendo, el perro estaba a punto de correr.",
    "fr": "si le chat sera en train de manger, le chien était sur le point de courir.",
    "it": "se il gatto starà mangiando, il cane stava per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato estará comendo, o cão estava prestes a correr.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estará a punto de comer, el perro estaba a punto de correr.",
    "fr": "si le chat sera sur le point de manger, le chien était sur le point de courir.",
    "it": "se il gatto starà per mangiare, il cane stava per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato estará prestes a comer, o cão estava prestes a correr.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato habrá comido, el perro estaba a punto de correr.",
    "fr": "si le chat aura mangé, le chien était sur le point de courir.",
    "it": "se il gatto avrà mangiato, il cane stava per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato terá comido, o cão estava prestes a correr.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estaba a punto de correr.",
    "fr": "si le chat mangeait, le chien était sur le point de courir.",
    "it": "se il gatto mangiasse, il cane stava per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato comesse, o cão estava prestes a correr.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estaba comiendo, el perro estaba a punto de correr.",
    "fr": "si le chat était en train de manger, le chien était sur le point de courir.",
    "it": "se il gatto stava mangiando, il cane stava per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato estava comendo, o cão estava prestes a correr.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estaba a punto de comer, el perro estaba a punto de correr.",
    "fr": "si le chat était sur le point de manger, le chien était sur le point de courir.",
    "it": "se il gatto stava per mangiare, il cane stava per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato estava prestes a comer, o cão estava prestes a correr.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato había comido, el perro estaba a punto de correr.",
    "fr": "si le chat avait mangé, le chien était sur le point de courir.",
    "it": "se il gatto aveva mangiato, il cane stava per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato tinha comido, o cão estava prestes a correr.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro estaba a punto de correr.",
    "fr": "si le chat mangeait, le chien était sur le point de courir.",
    "it": "se il gatto mangiasse, il cane stava per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato comesse, o cão estava prestes a correr.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato está comiendo, el perro estaba a punto de correr.",
    "fr": "si le chat est en train de manger, le chien était sur le point de courir.",
    "it": "se il gatto sta mangiando, il cane stava per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato está comendo, o cão estava prestes a correr.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato está a punto de comer, el perro estaba a punto de correr.",
    "fr": "si le chat est sur le point de manger, le chien était sur le point de courir.",
    "it": "se il gatto sta per mangiare, il cane stava per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato está prestes a comer, o cão estava prestes a correr.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato ha comido, el perro estaba a punto de correr.",
    "fr": "si le chat a mangé, le chien était sur le point de courir.",
    "it": "se il gatto ha mangiato, il cane stava per correre.",
    "ja": "もし猫が食べたら、犬は走るところでした。",
    "pt": "se o gato comeu, o cão estava prestes a correr.",
  },
}
`;

exports[`main: past · resultative > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro había corrido.",
    "fr": "si le chat mangeait, le chien avait couru.",
    "it": "se il gatto mangiasse, il cane aveva corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato comesse, o cão tinha corrido.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estará comiendo, el perro había corrido.",
    "fr": "si le chat sera en train de manger, le chien avait couru.",
    "it": "se il gatto starà mangiando, il cane aveva corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato estará comendo, o cão tinha corrido.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estará a punto de comer, el perro había corrido.",
    "fr": "si le chat sera sur le point de manger, le chien avait couru.",
    "it": "se il gatto starà per mangiare, il cane aveva corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato estará prestes a comer, o cão tinha corrido.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato habrá comido, el perro había corrido.",
    "fr": "si le chat aura mangé, le chien avait couru.",
    "it": "se il gatto avrà mangiato, il cane aveva corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato terá comido, o cão tinha corrido.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro había corrido.",
    "fr": "si le chat mangeait, le chien avait couru.",
    "it": "se il gatto mangiasse, il cane aveva corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato comesse, o cão tinha corrido.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estaba comiendo, el perro había corrido.",
    "fr": "si le chat était en train de manger, le chien avait couru.",
    "it": "se il gatto stava mangiando, il cane aveva corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato estava comendo, o cão tinha corrido.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estaba a punto de comer, el perro había corrido.",
    "fr": "si le chat était sur le point de manger, le chien avait couru.",
    "it": "se il gatto stava per mangiare, il cane aveva corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato estava prestes a comer, o cão tinha corrido.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato había comido, el perro había corrido.",
    "fr": "si le chat avait mangé, le chien avait couru.",
    "it": "se il gatto aveva mangiato, il cane aveva corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato tinha comido, o cão tinha corrido.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro había corrido.",
    "fr": "si le chat mangeait, le chien avait couru.",
    "it": "se il gatto mangiasse, il cane aveva corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato comesse, o cão tinha corrido.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato está comiendo, el perro había corrido.",
    "fr": "si le chat est en train de manger, le chien avait couru.",
    "it": "se il gatto sta mangiando, il cane aveva corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato está comendo, o cão tinha corrido.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato está a punto de comer, el perro había corrido.",
    "fr": "si le chat est sur le point de manger, le chien avait couru.",
    "it": "se il gatto sta per mangiare, il cane aveva corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato está prestes a comer, o cão tinha corrido.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato ha comido, el perro había corrido.",
    "fr": "si le chat a mangé, le chien avait couru.",
    "it": "se il gatto ha mangiato, il cane aveva corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいました。",
    "pt": "se o gato comeu, o cão tinha corrido.",
  },
}
`;

exports[`main: present · neutral > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estará comiendo, el perro correría.",
    "fr": "si le chat sera en train de manger, le chien courrait.",
    "it": "se il gatto starà mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estará comendo, o cão correria.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estará a punto de comer, el perro correría.",
    "fr": "si le chat sera sur le point de manger, le chien courrait.",
    "it": "se il gatto starà per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estará prestes a comer, o cão correria.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato habrá comido, el perro correría.",
    "fr": "si le chat aura mangé, le chien courrait.",
    "it": "se il gatto avrà mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato terá comido, o cão correria.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato estaba comiendo, el perro correría.",
    "fr": "si le chat était en train de manger, le chien courrait.",
    "it": "se il gatto stava mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estava comendo, o cão correria.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato estaba a punto de comer, el perro correría.",
    "fr": "si le chat était sur le point de manger, le chien courrait.",
    "it": "se il gatto stava per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato estava prestes a comer, o cão correria.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato había comido, el perro correría.",
    "fr": "si le chat avait mangé, le chien courrait.",
    "it": "se il gatto aveva mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato tinha comido, o cão correria.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde laufen.",
    "en": "if the cat ate, the dog would run.",
    "es": "si el gato comiera, el perro correría.",
    "fr": "si le chat mangeait, le chien courrait.",
    "it": "se il gatto mangiasse, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato comesse, o cão correria.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde laufen.",
    "en": "if the cat was eating, the dog would run.",
    "es": "si el gato está comiendo, el perro correría.",
    "fr": "si le chat est en train de manger, le chien courrait.",
    "it": "se il gatto sta mangiando, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato está comendo, o cão correria.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde laufen.",
    "en": "if the cat was about to eat, the dog would run.",
    "es": "si el gato está a punto de comer, el perro correría.",
    "fr": "si le chat est sur le point de manger, le chien courrait.",
    "it": "se il gatto sta per mangiare, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato está prestes a comer, o cão correria.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde laufen.",
    "en": "if the cat had eaten, the dog would run.",
    "es": "si el gato ha comido, el perro correría.",
    "fr": "si le chat a mangé, le chien courrait.",
    "it": "se il gatto ha mangiato, il cane correrebbe.",
    "ja": "もし猫が食べたら、犬は走ります。",
    "pt": "se o gato comeu, o cão correria.",
  },
}
`;

exports[`main: present · progressive > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro está corriendo.",
    "fr": "si le chat mangeait, le chien est en train de courir.",
    "it": "se il gatto mangiasse, il cane sta correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato comesse, o cão está correndo.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estará comiendo, el perro está corriendo.",
    "fr": "si le chat sera en train de manger, le chien est en train de courir.",
    "it": "se il gatto starà mangiando, il cane sta correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estará comendo, o cão está correndo.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estará a punto de comer, el perro está corriendo.",
    "fr": "si le chat sera sur le point de manger, le chien est en train de courir.",
    "it": "se il gatto starà per mangiare, il cane sta correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estará prestes a comer, o cão está correndo.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato habrá comido, el perro está corriendo.",
    "fr": "si le chat aura mangé, le chien est en train de courir.",
    "it": "se il gatto avrà mangiato, il cane sta correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato terá comido, o cão está correndo.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro está corriendo.",
    "fr": "si le chat mangeait, le chien est en train de courir.",
    "it": "se il gatto mangiasse, il cane sta correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato comesse, o cão está correndo.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato estaba comiendo, el perro está corriendo.",
    "fr": "si le chat était en train de manger, le chien est en train de courir.",
    "it": "se il gatto stava mangiando, il cane sta correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estava comendo, o cão está correndo.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato estaba a punto de comer, el perro está corriendo.",
    "fr": "si le chat était sur le point de manger, le chien est en train de courir.",
    "it": "se il gatto stava per mangiare, il cane sta correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato estava prestes a comer, o cão está correndo.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato había comido, el perro está corriendo.",
    "fr": "si le chat avait mangé, le chien est en train de courir.",
    "it": "se il gatto aveva mangiato, il cane sta correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato tinha comido, o cão está correndo.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gerade laufen.",
    "en": "if the cat ate, the dog would be running.",
    "es": "si el gato comiera, el perro está corriendo.",
    "fr": "si le chat mangeait, le chien est en train de courir.",
    "it": "se il gatto mangiasse, il cane sta correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato comesse, o cão está correndo.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gerade laufen.",
    "en": "if the cat was eating, the dog would be running.",
    "es": "si el gato está comiendo, el perro está corriendo.",
    "fr": "si le chat est en train de manger, le chien est en train de courir.",
    "it": "se il gatto sta mangiando, il cane sta correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato está comendo, o cão está correndo.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gerade laufen.",
    "en": "if the cat was about to eat, the dog would be running.",
    "es": "si el gato está a punto de comer, el perro está corriendo.",
    "fr": "si le chat est sur le point de manger, le chien est en train de courir.",
    "it": "se il gatto sta per mangiare, il cane sta correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato está prestes a comer, o cão está correndo.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gerade laufen.",
    "en": "if the cat had eaten, the dog would be running.",
    "es": "si el gato ha comido, el perro está corriendo.",
    "fr": "si le chat a mangé, le chien est en train de courir.",
    "it": "se il gatto ha mangiato, il cane sta correndo.",
    "ja": "もし猫が食べたら、犬は走っています。",
    "pt": "se o gato comeu, o cão está correndo.",
  },
}
`;

exports[`main: present · prospective > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro está a punto de correr.",
    "fr": "si le chat mangeait, le chien est sur le point de courir.",
    "it": "se il gatto mangiasse, il cane sta per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato comesse, o cão está prestes a correr.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estará comiendo, el perro está a punto de correr.",
    "fr": "si le chat sera en train de manger, le chien est sur le point de courir.",
    "it": "se il gatto starà mangiando, il cane sta per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estará comendo, o cão está prestes a correr.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estará a punto de comer, el perro está a punto de correr.",
    "fr": "si le chat sera sur le point de manger, le chien est sur le point de courir.",
    "it": "se il gatto starà per mangiare, il cane sta per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estará prestes a comer, o cão está prestes a correr.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato habrá comido, el perro está a punto de correr.",
    "fr": "si le chat aura mangé, le chien est sur le point de courir.",
    "it": "se il gatto avrà mangiato, il cane sta per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato terá comido, o cão está prestes a correr.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro está a punto de correr.",
    "fr": "si le chat mangeait, le chien est sur le point de courir.",
    "it": "se il gatto mangiasse, il cane sta per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato comesse, o cão está prestes a correr.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato estaba comiendo, el perro está a punto de correr.",
    "fr": "si le chat était en train de manger, le chien est sur le point de courir.",
    "it": "se il gatto stava mangiando, il cane sta per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estava comendo, o cão está prestes a correr.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato estaba a punto de comer, el perro está a punto de correr.",
    "fr": "si le chat était sur le point de manger, le chien est sur le point de courir.",
    "it": "se il gatto stava per mangiare, il cane sta per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato estava prestes a comer, o cão está prestes a correr.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato había comido, el perro está a punto de correr.",
    "fr": "si le chat avait mangé, le chien est sur le point de courir.",
    "it": "se il gatto aveva mangiato, il cane sta per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato tinha comido, o cão está prestes a correr.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat ate, the dog would be about to run.",
    "es": "si el gato comiera, el perro está a punto de correr.",
    "fr": "si le chat mangeait, le chien est sur le point de courir.",
    "it": "se il gatto mangiasse, il cane sta per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato comesse, o cão está prestes a correr.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was eating, the dog would be about to run.",
    "es": "si el gato está comiendo, el perro está a punto de correr.",
    "fr": "si le chat est en train de manger, le chien est sur le point de courir.",
    "it": "se il gatto sta mangiando, il cane sta per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato está comendo, o cão está prestes a correr.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat was about to eat, the dog would be about to run.",
    "es": "si el gato está a punto de comer, el perro está a punto de correr.",
    "fr": "si le chat est sur le point de manger, le chien est sur le point de courir.",
    "it": "se il gatto sta per mangiare, il cane sta per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato está prestes a comer, o cão está prestes a correr.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde im Begriff sein zu laufen.",
    "en": "if the cat had eaten, the dog would be about to run.",
    "es": "si el gato ha comido, el perro está a punto de correr.",
    "fr": "si le chat a mangé, le chien est sur le point de courir.",
    "it": "se il gatto ha mangiato, il cane sta per correre.",
    "ja": "もし猫が食べたら、犬は走るところです。",
    "pt": "se o gato comeu, o cão está prestes a correr.",
  },
}
`;

exports[`main: present · resultative > over every tense × aspect of the if clause 1`] = `
{
  "future · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro ha corrido.",
    "fr": "si le chat mangeait, le chien a couru.",
    "it": "se il gatto mangiasse, il cane ha corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato comesse, o cão correu.",
  },
  "future · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estará comiendo, el perro ha corrido.",
    "fr": "si le chat sera en train de manger, le chien a couru.",
    "it": "se il gatto starà mangiando, il cane ha corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estará comendo, o cão correu.",
  },
  "future · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estará a punto de comer, el perro ha corrido.",
    "fr": "si le chat sera sur le point de manger, le chien a couru.",
    "it": "se il gatto starà per mangiare, il cane ha corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estará prestes a comer, o cão correu.",
  },
  "future · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato habrá comido, el perro ha corrido.",
    "fr": "si le chat aura mangé, le chien a couru.",
    "it": "se il gatto avrà mangiato, il cane ha corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato terá comido, o cão correu.",
  },
  "past · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro ha corrido.",
    "fr": "si le chat mangeait, le chien a couru.",
    "it": "se il gatto mangiasse, il cane ha corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato comesse, o cão correu.",
  },
  "past · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato estaba comiendo, el perro ha corrido.",
    "fr": "si le chat était en train de manger, le chien a couru.",
    "it": "se il gatto stava mangiando, il cane ha corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estava comendo, o cão correu.",
  },
  "past · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato estaba a punto de comer, el perro ha corrido.",
    "fr": "si le chat était sur le point de manger, le chien a couru.",
    "it": "se il gatto stava per mangiare, il cane ha corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato estava prestes a comer, o cão correu.",
  },
  "past · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato había comido, el perro ha corrido.",
    "fr": "si le chat avait mangé, le chien a couru.",
    "it": "se il gatto aveva mangiato, il cane ha corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato tinha comido, o cão correu.",
  },
  "present · neutral": {
    "de": "wenn der Kater würde essen, der Hund würde gelaufen sein.",
    "en": "if the cat ate, the dog would have run.",
    "es": "si el gato comiera, el perro ha corrido.",
    "fr": "si le chat mangeait, le chien a couru.",
    "it": "se il gatto mangiasse, il cane ha corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato comesse, o cão correu.",
  },
  "present · progressive": {
    "de": "wenn der Kater würde gerade essen, der Hund würde gelaufen sein.",
    "en": "if the cat was eating, the dog would have run.",
    "es": "si el gato está comiendo, el perro ha corrido.",
    "fr": "si le chat est en train de manger, le chien a couru.",
    "it": "se il gatto sta mangiando, il cane ha corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato está comendo, o cão correu.",
  },
  "present · prospective": {
    "de": "wenn der Kater würde im Begriff sein zu essen, der Hund würde gelaufen sein.",
    "en": "if the cat was about to eat, the dog would have run.",
    "es": "si el gato está a punto de comer, el perro ha corrido.",
    "fr": "si le chat est sur le point de manger, le chien a couru.",
    "it": "se il gatto sta per mangiare, il cane ha corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato está prestes a comer, o cão correu.",
  },
  "present · resultative": {
    "de": "wenn der Kater würde gegessen haben, der Hund würde gelaufen sein.",
    "en": "if the cat had eaten, the dog would have run.",
    "es": "si el gato ha comido, el perro ha corrido.",
    "fr": "si le chat a mangé, le chien a couru.",
    "it": "se il gatto ha mangiato, il cane ha corso.",
    "ja": "もし猫が食べたら、犬は走ってしまいます。",
    "pt": "se o gato comeu, o cão correu.",
  },
}
`;
